# assistente-regras-ponto

./: README.md  app.py  build_dataset.py  main.py  pyproject.toml  requirements.txt
docs_raw/: Form 85.00 - Pedido de Abertura de vaga.docx  Requisitos para Ocupação de Cargos - Analista de SGI.docx
