[project]
name = "assistente-regras-ponto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "ollama>=0.6.0",
    "pypdf>=6.1.1",
    "streamlit>=1.50.0",
]
